// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnotationTable should be able to export a CSV 1`] = `
"# URL: http://localhost/annotations?viewId=xxxx&ds=2019-02-12_15h55m06s
\\"group\\",\\"datasetName\\",\\"datasetId\\",\\"formula\\",\\"adduct\\",\\"chemMod\\",\\"ion\\",\\"mz\\",\\"msm\\",\\"fdr\\",\\"rhoSpatial\\",\\"rhoSpectral\\",\\"rhoChaos\\",\\"moleculeNames\\",\\"moleculeIds\\",\\"minIntensity\\",\\"maxIntensity\\",\\"totalIntensity\\",\\"offSample\\",\\"rawOffSampleProb\\",\\"isomerIons\\",\\"isobarIons\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.0.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"1\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10\\",\\"0\\",\\"7.333333333333333\\",\\"false\\",\\"0.03\\",\\"annotations.0.isomers.0.ion, annotations.0.isomers.1.ion\\",\\"annotations.0.isobars.0.ion, annotations.0.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.1.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"2\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10.333333333333334\\",\\"0.3333333333333333\\",\\"7.666666666666667\\",\\"false\\",\\"0.03\\",\\"annotations.1.isomers.0.ion, annotations.1.isomers.1.ion\\",\\"annotations.1.isobars.0.ion, annotations.1.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.0.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"3\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10\\",\\"0\\",\\"7.333333333333333\\",\\"false\\",\\"0.03\\",\\"annotations.0.isomers.0.ion, annotations.0.isomers.1.ion\\",\\"annotations.0.isobars.0.ion, annotations.0.isobars.1.ion\\"
\\"Laboratory of European Molecular Biology\\",\\"Untreated_3_434\\",\\"2019-02-12_15h55m06s\\",\\"C19H18N2O7S2\\",\\"M-H\\",\\"annotations.1.chemMod\\",\\"C19H18N2O7S2-H+\\",\\"4\\",\\"0.657486\\",\\"0.1\\",\\"0.686362\\",\\"0.959122\\",\\"0.998756\\",\\"C.I. Food Red 6\\",\\"HMDB0032738\\",\\"10.333333333333334\\",\\"0.3333333333333333\\",\\"7.666666666666667\\",\\"false\\",\\"0.03\\",\\"annotations.1.isomers.0.ion, annotations.1.isomers.1.ion\\",\\"annotations.1.isobars.0.ion, annotations.1.isobars.1.ion\\"
"
`;

exports[`AnnotationTable should match snapshot 1`] = `
<div class="el-row">
  <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--mini" id="annot-table" element-loading-text="Loading results …" tabindex="1" mock-v-loading="false">
    <div class="hidden-columns">
      <div></div>
      <div></div>
      <div></div>
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
    </div>
    <div class="el-table__header-wrapper">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 550px;">
        <colgroup>
          <col name="el-table_1_column_1" width="95">
          <col name="el-table_1_column_2" width="140">
          <col name="el-table_1_column_3" width="120">
          <col name="el-table_1_column_4" width="65">
          <col name="el-table_1_column_5" width="70">
          <col name="el-table_1_column_6" width="60">
        </colgroup>
        <thead class="">
          <tr class="">
            <th colspan="1" rowspan="1" class="el-table_1_column_1     is-leaf is-sortable">
              <div class="cell">Lab<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_2     is-leaf is-sortable">
              <div class="cell">Dataset<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_3     is-leaf is-sortable">
              <div class="cell">Annotation<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_4     is-leaf is-sortable">
              <div class="cell">m/z<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_5 descending    is-leaf is-sortable">
              <div class="cell">MSM<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_1_column_6   fdr-cell  is-leaf is-sortable">
              <div class="cell">FDR<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="el-table__body-wrapper is-scrolling-left">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 550px;">
        <colgroup>
          <col name="el-table_1_column_1" width="95">
          <col name="el-table_1_column_2" width="140">
          <col name="el-table_1_column_3" width="120">
          <col name="el-table_1_column_4" width="65">
          <col name="el-table_1_column_5" width="70">
          <col name="el-table_1_column_6" width="60">
        </colgroup>
        <tbody>
          <!---->
        </tbody>
      </table>
      <div class="el-table__empty-block" style="height: 100%; width: 550px;"><span class="el-table__empty-text"><p>
      No annotations were found
    </p></span></div>
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <div class="el-table__column-resize-proxy" style="display: none;"></div>
  </div>
  <div class="flex justify-between items-start mt-2">
    <div class="mt-1">
      <mock-el-pagination page-size="15" page-sizes="15,20,25,30" current-page="1" layout="prev,pager,next,sizes"></mock-el-pagination>
      <div id="annot-count" class="mt-2"><b></b> matching records
      </div>
      <div class="mt-2">
        <div class="fdr-legend-header">
          FDR levels:
        </div>
        <div class="fdr-legend fdr-5">
          5%
        </div>
        <div class="fdr-legend fdr-10">
          10%
        </div>
        <div class="fdr-legend fdr-20">
          20%
        </div>
        <div class="fdr-legend fdr-50">
          50%
        </div>
      </div>
    </div>
    <div class="flex w-full items-center justify-end flex-wrap">
      <mock-el-popover class="mt-1">
        <div slot-key="default">
          <div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Lab</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Dataset</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Annotation</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Adduct</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>m/z</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Off-sample probability %</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spatial</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spectral</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>chaos</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>MSM</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Database</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Molecules</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isomers/Isobars</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Max Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Total Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>FDR</span></div>
          </div>
        </div>
        <div slot-key="reference"><button type="button" class="el-button el-button--default">
            <!---->
            <!----><span><div class="el-badge new-custom-badge sm-feature-badge"><div>
              Columns <i class="el-icon-arrow-down"></i></div><transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></button></div>
      </mock-el-popover>
      <mock-el-popover trigger="hover" class="ml-2 mt-1">
        <div slot-key="default">

          Documentation for the CSV export is available
          <a href="https://github.com/metaspace2020/metaspace/wiki/CSV-annotations-export" rel="noopener noreferrer nofollow" target="_blank">
            here<svg data-icon="icon-external-window" class="inline h-4 w-4 -mb-1 fill-current text-gray-800"></svg></a></div>
        <div slot-key="reference">
          <div><button type="button" class="el-button export-btn el-button--default" slot="reference">
              <!---->
              <!----><span>
            Export to CSV
          </span></button></div>
        </div>
      </mock-el-popover>
      <div class="ml-2 mt-1"><button type="button" class="el-button full-screen-btn el-button--default">
          <!---->
          <!----><span><svg data-icon="exit_full_screen" class="full-screen-icon"></svg></span></button></div>
    </div>
  </div>
</div>
`;

exports[`AnnotationTable should match snapshot when loading snapshot 1`] = `
<div class="el-row">
  <div class="el-table el-table--fit el-table--striped el-table--border el-table--scrollable-x el-table--enable-row-hover el-table--mini" id="annot-table" element-loading-text="Loading results …" tabindex="1" mock-v-loading="false">
    <div class="hidden-columns">
      <div></div>
      <div></div>
      <div></div>
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <div></div>
      <!---->
    </div>
    <div class="el-table__header-wrapper">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 550px;">
        <colgroup>
          <col name="el-table_2_column_7" width="95">
          <col name="el-table_2_column_8" width="140">
          <col name="el-table_2_column_9" width="120">
          <col name="el-table_2_column_10" width="65">
          <col name="el-table_2_column_11" width="70">
          <col name="el-table_2_column_12" width="60">
        </colgroup>
        <thead class="">
          <tr class="">
            <th colspan="1" rowspan="1" class="el-table_2_column_7     is-leaf is-sortable">
              <div class="cell">Lab<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_8     is-leaf is-sortable">
              <div class="cell">Dataset<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_9     is-leaf is-sortable">
              <div class="cell">Annotation<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_10     is-leaf is-sortable">
              <div class="cell">m/z<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_11 descending    is-leaf is-sortable">
              <div class="cell">MSM<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
            <th colspan="1" rowspan="1" class="el-table_2_column_12   fdr-cell  is-leaf is-sortable">
              <div class="cell">FDR<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="el-table__body-wrapper is-scrolling-left">
      <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 550px;">
        <colgroup>
          <col name="el-table_2_column_7" width="95">
          <col name="el-table_2_column_8" width="140">
          <col name="el-table_2_column_9" width="120">
          <col name="el-table_2_column_10" width="65">
          <col name="el-table_2_column_11" width="70">
          <col name="el-table_2_column_12" width="60">
        </colgroup>
        <tbody>
          <!---->
        </tbody>
      </table>
      <div class="el-table__empty-block" style="height: 100%; width: 550px;"><span class="el-table__empty-text"><p style="text-align: left;">
      No annotations were found for this dataset at 10% FDR. This might be because of:
      <ul><li>Incorrect database setting</li> <li>Calibration issues</li> <li>Wrong polarity provided during upload</li></ul>

      Please:
      <ul><li>Select another database <br>(HMDB-v4 is always applicable)</li> <li>Relax the FDR filter</li> <li>Look for missing pixels/stripes: <br>these indicate calibration issues</li></ul></p></span></div>
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
    <!---->
    <div class="el-table__column-resize-proxy" style="display: none;"></div>
  </div>
  <div class="flex justify-between items-start mt-2">
    <div class="mt-1">
      <mock-el-pagination page-size="15" page-sizes="15,20,25,30" current-page="1" layout="pager"></mock-el-pagination>
      <div id="annot-count" class="mt-2"><b></b> matching records
      </div>
      <div class="mt-2">
        <div class="fdr-legend-header">
          FDR levels:
        </div>
        <div class="fdr-legend fdr-5">
          5%
        </div>
        <div class="fdr-legend fdr-10">
          10%
        </div>
        <div class="fdr-legend fdr-20">
          20%
        </div>
        <div class="fdr-legend fdr-50">
          50%
        </div>
      </div>
    </div>
    <div class="flex w-full items-center justify-end flex-wrap">
      <mock-el-popover class="mt-1">
        <div slot-key="default">
          <div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Lab</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Dataset</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>Annotation</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Adduct</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>m/z</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Off-sample probability %</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spatial</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>spectral</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span> ρ<sub>chaos</sub></span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>MSM</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Database</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Molecules</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Isomers/Isobars</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Max Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check invisible"></i> <span>Total Intensity</span></div>
            <div class="cursor-pointer select-none"><i class="el-icon-check"></i> <span>FDR</span></div>
          </div>
        </div>
        <div slot-key="reference"><button type="button" class="el-button el-button--default">
            <!---->
            <!----><span><div class="el-badge new-custom-badge sm-feature-badge"><div>
              Columns <i class="el-icon-arrow-down"></i></div><transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></button></div>
      </mock-el-popover>
      <mock-el-popover trigger="hover" class="ml-2 mt-1">
        <div slot-key="default">

          Documentation for the CSV export is available
          <a href="https://github.com/metaspace2020/metaspace/wiki/CSV-annotations-export" rel="noopener noreferrer nofollow" target="_blank">
            here<svg data-icon="icon-external-window" class="inline h-4 w-4 -mb-1 fill-current text-gray-800"></svg></a></div>
        <div slot-key="reference">
          <div><button type="button" class="el-button export-btn el-button--default" slot="reference">
              <!---->
              <!----><span>
            Export to CSV
          </span></button></div>
        </div>
      </mock-el-popover>
      <div class="ml-2 mt-1"><button type="button" class="el-button full-screen-btn el-button--default">
          <!---->
          <!----><span><svg data-icon="exit_full_screen" class="full-screen-icon"></svg></span></button></div>
    </div>
  </div>
</div>
`;
